--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="Register.css">
     <link rel="stylesheet" type="text/css" href="ng-grid.css">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <!-- jQuery library -->    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>    <!-- Latest compiled JavaScript -->    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>    <script src="angcontroller.js" type="text/javascript"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-cookies.js"> </script>    <script src="ui-grid.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"/>
+    <!-- jQuery library -->    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>    <!-- Latest compiled JavaScript -->    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>    <script src="angcontroller.js" type="text/javascript"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-cookies.js"> </script>    <script src="ui-grid.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet">
     <script src="Register.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
@@ -21,7 +21,7 @@
     <div class="top">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3 col-xs-3 col-md-2 " >                    <a href="http://www.automationtesting.in" class="navbar-brand" >                        <img   src="original.png" alt="image not displaying" style="height: 50px" >                    </a>                </div>
+                <div class="col-sm-3 col-xs-3 col-md-2 " >                    <a href="" class="navbar-brand" >                        <img   src="original.png" alt="image not displaying" style="height: 50px" >                    </a>                </div>
                 <div class="col-sm-8 col-xs-8 col-md-8" align="center">
                     <h1>Automation Demo Site </h1>
                 </div>
@@ -40,7 +40,7 @@
             <div class="navbar-collapse collapse navbar-right" >
                 <ul class="nav navbar-nav" style="width: 106%;">
                     <li>                        <a href="Index.html">Home</a>                    </li>
-                    <li class="active">                        <a href="Register.html">Register</a>                    </li>
+                    <li class="active">                        <a href="index.html">Register</a>                    </li>
                     <li>                        <a href="WebTable.html">WebTable</a>                    </li>
                     <li class="dropdown">
                         <a href="SwitchTo.html" data-toggle="dropdown" class="dropdown-toggle" >SwitchTo</a>                        <i class="fa fa-angle-down"> </i>
