--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                 <form id="basicBootstrapForm" ng-submit="createdata()" class="form-horizontal">
                     <div class="form-group">
                         <label class="col-md-3 col-xs-3 col-sm-3 control-label">Full Name* </label>
-                        <div class="col-md-4 col-xs-4 col-sm-4"><input type="text" placeholder="First Name"
+                        <div class="col-md-4 col-xs-4 col-sm-4"><input type="text" data-test-id="firstname"  placeholder="First Name"
                                                                        class="form-control" ng-model="FirstName"
                                                                        required> </input></div>
-                        <div class="col-md-4 col-xs-4 col-sm-4"><input type="text" placeholder="Last Name"
+                        <div class="col-md-4 col-xs-4 col-sm-4"><input type="text" data-test-id="lastname" placeholder="Last Name"
                                                                        class="form-control" ng-model="LastName"
                                                                        required> </input></div>
                     </div>
@@ -215,7 +215,7 @@
                         <div class="col-md-4 col-xs-4 col-sm-4"><label> <input type="radio" name="radiooptions"
                                                                                ng-model="radiovalue" value="Male"
                                                                                required> Male </input></label> <label>
-                            <input type="radio" name="radiooptions" ng-model="radiovalue" value="FeMale"> FeMale</input>
+                            <input type="radio" name="radiooptions" ng-model="radiovalue" value="FeMale"> Female</input>
                         </label></div>
                     </div>
                     <div class="form-group">
@@ -328,7 +328,6 @@
                                 </div>
                             </multi-select>
                         </div>
-                        >
                         <!--                   <select type="text" class="form-control" id="Languages" ng-model="Language" ng-init="Language=''">                  <option value=""> Select languages</option>                   </select>-->
                     </div>
 
@@ -551,7 +550,7 @@
                     </div>
                     <div class="form group">
                         <div class="col-md-9 col-md-offset-3 com-sm-9 col-sm-offset-3 col-xs-9 col-xs-offset-3 ">
-                            <button id="submitbtn" type="submit" class="btn btn-primary" name="signup" value="sign up">
+                            <button onclick="registersuccess()" id="submitbtn" type="submit" class="btn btn-primary" name="signup" value="sign up">
                                 Submit
                             </button>
                             <button id="Button1" type="button" class="btn btn-primary" value="Refresh">Refresh</button>
@@ -617,6 +616,12 @@
     } );
 
 </script>
+
+<script>
+    function registersuccess ( ) {
+        alert('You have been registered');
+    }
+</script>>
 
 </body>
 <script>'undefined' === typeof _trfq || ( window._trfq = [] );
