--- a/index.html
+++ b/index.html
@@ -92,39 +92,13 @@
                     <li class="active"><a href="index.html">Register</a></li>
                     <li><a href="WebTable.html">WebTable</a></li>
                     <li class="dropdown">
-                        <a href="SwitchTo.html" data-toggle="dropdown" class="dropdown-toggle">SwitchTo</a> <i
-                            class="fa fa-angle-down"> </i>
-                        <ul class="dropdown-menu">
-                            <li><a href="Alerts.html" style="color: white">Alerts</a></li>
-                            <li><a href="Windows.html" style="color: white">Windows</a></li>
-                            <li><a href="Frames.html" style="color: white">Frames</a></li>
-                        </ul>
+                        <a href="SwitchTo.html" data-toggle="dropdown" class="dropdown-toggle">SwitchTo</a>
                     </li>
                     <li class="dropdown ">
-                        <a href="Widgets.html" data-toggle="dropdown" class="dropdown-toggle">Widgets</a> <i
-                            class="fa fa-angle-down"> </i>
-                        <ul class="dropdown-menu">
-                            <li><a href="Accordion.html" style="color: white"> Accordion </a></li>
-                            <li><a href="AutoComplete.html" style="color: white"> AutoComplete </a></li>
-                            <li><a href="Datepicker.html" style="color: white"> Datepicker </a></li>
-                            <li><a href="Slider.html" style="color: white"> Slider </a></li>
-                        </ul>
+                        <a href="Widgets.html" data-toggle="dropdown" class="dropdown-toggle">Widgets</a>
                     </li>
                     <li class="dropdown ">
-                        <a href="Interactions.html" data-toggle="dropdown" class="dropdown-toggle">Interactions </a> <i
-                            class="fa fa-angle-down"> </i>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a data-toggle="dropdown" class="dropdown-toggle" style="color: white;cursor: pointer">Drag
-                                    and Drop </a>
-                                <ul class="childmenu ">
-                                    <li><a href="Static.html" style="color: white">Static </a></li>
-                                    <li><a href="Dynamic.html" style="color: white">Dynamic </a></li>
-                                </ul>
-                            </li>
-                            <li><a href="Selectable.html" style="color: white">Selectable </a></li>
-                            <li><a href="Resizable.html" style="color: white">Resizable</a></li>
-                        </ul>
+                        <a href="Interactions.html" data-toggle="dropdown" class="dropdown-toggle">Interactions </a>
                     </li>
                     <li class="dropdown">
                         <a href="SwitchTo.html" data-toggle="dropdown" class="dropdown-toggle">Video</a> <i
@@ -135,14 +109,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="WYSIWYG.html" data-toggle="dropdown" class="dropdown-toggle">WYSIWYG</a> <i
-                            class="fa fa-angle-down"> </i>
-                        <ul class="dropdown-menu">
-                            <li><a href="TinyMCE.html" style="color: white">TinyMCE</a></li>
-                            <li><a href="CKEditor.html" style="color: white">CKEditor</a></li>
-                            <li><a href="SummerNote.html" style="color: white">SummerNote</a></li>
-                            <li><a href="CodeMirror.html" style="color: white">CodeMirror</a></li>
-                        </ul>
+                        <a href="WYSIWYG.html" data-toggle="dropdown" class="dropdown-toggle">WYSIWYG</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle">More</a> <i
@@ -152,13 +119,9 @@
                             <li><a href="DynamicData.html" style="color: white">Dynamic Data</a></li>
                             <li><a href="FileDownload.html" style="color: white">File Download</a></li>
                             <li><a href="FileUpload.html" style="color: white">File Upload</a></li>
-                            <li><a href="JqueryProgressBar.html" style="color: white">JQuery ProgressBar</a></li>
-                            <li><a href="Loader.html" style="color: white">Loader</a></li>
-                            <li><a href="Modals.html" style="color: white">Modals</a></li>
-                            <li><a href="ProgressBar.html" style="color: white">ProgressBar</a></li>
                         </ul>
                     </li>
-                    <li><a href="http://tymeshift.com/">Practice Site</a></li>
+                    <li><a href="http://tymeshift.com/">Tymeshift</a></li>
                 </ul>
             </div>
         </div>
@@ -187,7 +150,7 @@
                         <label class="col-md-3 col-xs-3 col-sm-3 control-label">Full Name* </label>
                         <div class="col-md-4 col-xs-4 col-sm-4"><input type="text" data-id="firstname"  placeholder="First Name"
                                                                        class="form-control" ng-model="FirstName"
-                                                                       required> </input></div>
+                                                                               required> </input></div>
                         <div class="col-md-4 col-xs-4 col-sm-4"><input type="text" data-test-id="lastname" placeholder="Last Name"
                                                                        class="form-control" ng-model="LastName"
                                                                        required> </input></div>
