--- a/index.html
+++ b/index.html
@@ -98,27 +98,14 @@
                         <a href="Widgets.html" data-toggle="dropdown" class="dropdown-toggle">Widgets</a>
                     </li>
                     <li class="dropdown ">
-                        <a href="Interactions.html" data-toggle="dropdown" class="dropdown-toggle">Interactions </a>
+                        <a href="https://en.wikipedia.org/wiki/Interaction">Interactions </a>
                     </li>
                     <li class="dropdown">
                         <a href="SwitchTo.html" data-toggle="dropdown" class="dropdown-toggle">Video</a> <i
                             class="fa fa-angle-down"> </i>
                         <ul class="dropdown-menu">
-                            <li><a href="Youtube.html" style="color: white">Youtube</a></li>
-                            <li><a href="Vimeo.html" style="color: white">Vimeo</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="WYSIWYG.html" data-toggle="dropdown" class="dropdown-toggle">WYSIWYG</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">More</a> <i
-                            class="fa fa-angle-down"> </i>
-                        <ul class="dropdown-menu">
-                            <li><a href="Charts.html" style="color: white">Charts</a></li>
-                            <li><a href="DynamicData.html" style="color: white">Dynamic Data</a></li>
-                            <li><a href="FileDownload.html" style="color: white">File Download</a></li>
-                            <li><a href="FileUpload.html" style="color: white">File Upload</a></li>
+                            <li><a href="https://www.youtube.com/" style="color: white">Youtube</a></li>
+                            <li><a href="https://vimeo.com/" style="color: white">Vimeo</a></li>
                         </ul>
                     </li>
                     <li><a href="http://tymeshift.com/">Tymeshift</a></li>
